add pizza order

--- a/BASDTrainingWinForms.UI/BASDTrainingWinForms.UI.vbproj
+++ b/BASDTrainingWinForms.UI/BASDTrainingWinForms.UI.vbproj
@@ -109,6 +109,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="PizzaOrder.Designer.vb">
+      <DependentUpon>PizzaOrder.vb</DependentUpon>
+    </Compile>
+    <Compile Include="PizzaOrder.vb">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Main.resx">
@@ -119,6 +125,9 @@
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PizzaOrder.resx">
+      <DependentUpon>PizzaOrder.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
