--- a/BASDTrainingWinForms.UI/BASDTrainingWinForms.UI.vbproj
+++ b/BASDTrainingWinForms.UI/BASDTrainingWinForms.UI.vbproj
@@ -64,6 +64,9 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Cipher">
+      <HintPath>..\Cipher\bin\Debug\Cipher.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
@@ -88,6 +91,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="City.vb" />
+    <Compile Include="Login.Designer.vb">
+      <DependentUpon>Login.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Login.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Main.Designer.vb">
       <DependentUpon>Main.vb</DependentUpon>
     </Compile>
@@ -109,14 +118,24 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Orders.Designer.vb">
+      <DependentUpon>Orders.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Orders.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="PizzaOrder.Designer.vb">
       <DependentUpon>PizzaOrder.vb</DependentUpon>
     </Compile>
     <Compile Include="PizzaOrder.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="PizzaOrders.vb" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Login.resx">
+      <DependentUpon>Login.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.vb</DependentUpon>
     </EmbeddedResource>
@@ -125,6 +144,9 @@
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Orders.resx">
+      <DependentUpon>Orders.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PizzaOrder.resx">
       <DependentUpon>PizzaOrder.vb</DependentUpon>
@@ -168,6 +190,12 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BASDTRaining.Commons\BASDTRaining.Commons.vbproj">
+      <Project>{27D4EA9D-02AB-4E13-B644-1EDDD2A2DEA8}</Project>
+      <Name>BASDTRaining.Commons</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
