--- a/BASDTrainingWinForms.UI/BASDTrainingWinForms.UI.vbproj
+++ b/BASDTrainingWinForms.UI/BASDTrainingWinForms.UI.vbproj
@@ -90,6 +90,7 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="bert.vb" />
     <Compile Include="City.vb" />
     <Compile Include="Login.Designer.vb">
       <DependentUpon>Login.vb</DependentUpon>
