--- a/BASDTrainingWinForms.UI/BASDTrainingWinForms.UI.vbproj
+++ b/BASDTrainingWinForms.UI/BASDTrainingWinForms.UI.vbproj
@@ -119,6 +119,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="myform.Designer.vb">
+      <DependentUpon>myform.vb</DependentUpon>
+    </Compile>
+    <Compile Include="myform.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Orders.Designer.vb">
       <DependentUpon>Orders.vb</DependentUpon>
     </Compile>
@@ -145,6 +151,9 @@
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="myform.resx">
+      <DependentUpon>myform.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Orders.resx">
       <DependentUpon>Orders.vb</DependentUpon>
