--- a/BASDTrainingWinForms.UI/BASDTrainingWinForms.UI.vbproj
+++ b/BASDTrainingWinForms.UI/BASDTrainingWinForms.UI.vbproj
@@ -130,6 +130,11 @@
     <Compile Include="PizzaOrder.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="PizzaOrderDataSet.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>PizzaOrderDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="PizzaOrders.vb" />
   </ItemGroup>
   <ItemGroup>
@@ -153,6 +158,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
@@ -164,6 +170,17 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <None Include="PizzaOrderDataSet.xsc">
+      <DependentUpon>PizzaOrderDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="PizzaOrderDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>PizzaOrderDataSet.Designer.vb</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="PizzaOrderDataSet.xss">
+      <DependentUpon>PizzaOrderDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Resources\Desert.jpg" />
   </ItemGroup>
   <ItemGroup>
@@ -190,6 +207,16 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BASD.Helper\BASD.Helper.vbproj">
+      <Project>{CEC9EE9D-7976-4599-8765-F2B3A4553596}</Project>
+      <Name>BASD.Helper</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\BASDTraining.Entity\BASDTraining.Entity.vbproj">
+      <Project>{F8D71C88-C325-4AE7-A015-454AD7067C43}</Project>
+      <Name>BASDTraining.Entity</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
